# faceRec

./: CMakeLists.txt  README.md  face_gui.hpp  face_recognition.cpp
database/: build_db.sh
database/IDLabels/: IDLabels.txt  create_id_labels.py
database/IDPhotos/: IDPhotos.txt  create_id_photos.py
database/trainingSet/: create_training_set.py  trainingSet.txt
